----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-09-04 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php: bug #899430: left frame problem when lower_case_table_names==2
    * libraries/database_interface.lib.php: bug #1009791: now remove non-UTF-8
      choices from the drop-down (in main) for MySQL 4.1.x
    * Documentation.html: added some missing variables and new FAQ 2.7
      about using and creating themes

2004-09-03 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php, server_privileges.php, libraries/common.lib.php:
      replace charset introducers by CONVERT USING, 
      to support servers where the mysql.* tables are not in latin1
    * libraries/database_interface.lib.php: do not add BINARY and VARBINARY
      twice in the drop-down list of field types

2004-09-02 Alexander M. Turek  <me@derrabus.de>
    * Documentation.html: Typos; added a note about the deprecated MySQL
      versions 4.1.0 and 4.1.1.

2004-09-01 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/auth/cookie.auth.lib.php: bug #939531: when people upgrade
      phpMyAdmin on the same directory, the previous cookie pma_cookie_username
      was used but produced an Undefined offset in blowfish.php, because
      on previous PMA versions it was not encoded the same way. Now this old
      cookie is not used. Users have to reenter their username (not a big 
      impact IMO)

2004-09-01 Michal ÄihaÅ  <michal@cihar.com>
    * libraries/export/sql.php: Fix empty BLOB export (bug #1020052).

2004-08-29 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: bug #1007870, illegal mix of collations
      for operation UNION

2004-08-28 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_structure.php, tbl_properties.inc.php,
      libraries/sqlparser.data.php, /database_interface.lib.php:
      support for VARBINARY and BINARY field types

2004-08-27 Marc Delisle  <lem9@users.sourceforge.net>