@@ -5,6 +5,11 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-09-04 Alexander M. Turek  <me@derrabus.de>
+    * tbl_select.php:
+      - Bugfix: No quotes were added when querying (VAR)BINARY fields.
+      - Table search is now independant from the connection charset.
+
 2004-09-04 Marc Delisle  <lem9@users.sourceforge.net>
     * sql.php: bug #899430: left frame problem when lower_case_table_names==2
     * libraries/database_interface.lib.php: bug #1009791: now remove non-UTF-8
